--- a/Moviekus/Moviekus.Web/Pages/Movies/Details.cshtml
+++ b/Moviekus/Moviekus.Web/Pages/Movies/Details.cshtml
@@ -26,7 +26,7 @@
                     img64Url = string.Format("data:image/png;base64,{0}", img64);
                 }
             }
-            <img src="@img64Url" style="width: 240px;height: 300px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);" />
+            <img src="@img64Url" style="width: 240px;height: 300px; padding:5px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);" />
         </td>
         <td>
             <div style="padding-bottom:5px;">
