--- a/Moviekus/Moviekus.Web/Pages/Movies/Index.cshtml
+++ b/Moviekus/Moviekus.Web/Pages/Movies/Index.cshtml
@@ -43,7 +43,7 @@
                             img64Url = string.Format("data:image/png;base64,{0}", img64);
                         }
                     }
-                    <img src="@img64Url" style="width: 120px;height: 160px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);" />
+                    <img src="@img64Url" style="width: 120px;height: 160px; padding:5px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);" />
                 </td>
                 <td>
                     <h4>@Html.DisplayFor(modelItem => viewModel.Movie.Title)</h4>
