--- a/Moviekus/Moviekus.Web/Pages/Movies/Edit.cshtml
+++ b/Moviekus/Moviekus.Web/Pages/Movies/Edit.cshtml
@@ -14,7 +14,7 @@
 
 <hr />
 
-<div>
+<div> 
     <form method="post" enctype="multipart/form-data">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <table style="width:100%">
@@ -28,17 +28,14 @@
                     <div class="form-group">
                         <b><label asp-for="Movie.Description" class="control-label"></label></b>
                         <textarea asp-for="Movie.Description" rows="5" class="form-control"></textarea>
-                        <span asp-validation-for="Movie.Description" class="text-danger"></span>
                     </div>
                     <div class="form-group">
                         <b><label asp-for="Movie.ReleaseDate" class="control-label"></label></b>
                         <input asp-for="ReleaseDate" class="form-control" />
-                        <span asp-validation-for="Movie.ReleaseDate" class="text-danger"></span>
                     </div>
                     <div class="form-group">
                         <b><label asp-for="Movie.LastSeen" class="control-label"></label></b>
                         <input asp-for="LastSeen" class="form-control" />
-                        <span asp-validation-for="Movie.LastSeen" class="text-danger"></span>
                     </div>
                     <table>
                         <tr>
@@ -60,7 +57,6 @@
                                 <div class="form-group">
                                     <b><label asp-for="Movie.EpisodeNumber" class="control-label"></label></b>
                                     <input asp-for="Movie.EpisodeNumber" class="form-control" />
-                                    <span asp-validation-for="Movie.EpisodeNumber" class="text-danger"></span>
                                 </div>
                             </td>
 
@@ -70,11 +66,13 @@
                         <b>@Html.DisplayNameFor(model => model.Movie.Rating)</b>
                         <br />
                         <component type="typeof(Moviekus.Web.Pages.Components.RatingBar)" render-mode="ServerPrerendered" param-Rating="@(Model.Movie.Rating)" param-Enabled="true" />
+                        <span asp-validation-for="Movie.Rating" class="text-danger"></span>
                     </div>
                     <div class="form-group">
                         <b>@Html.DisplayNameFor(model => model.Movie.Source)</b>
                         <br />
                         <select asp-for="SelectedSourceId" asp-items="Model.Sources" class="form-control"></select>
+                        <span asp-validation-for="Movie.Source" class="text-danger"></span>
                     </div>
                     <table style="width:100%">
                         <tr>
@@ -82,14 +80,12 @@
                                 <div class="form-group">
                                     <b><label asp-for="Movie.Homepage" class="control-label"></label></b>
                                     <input asp-for="Movie.Homepage" class="form-control" />
-                                    <span asp-validation-for="Movie.Homepage" class="text-danger"></span>
                                 </div>
                             </td>
                             <td>
                                 <div class="form-group">
                                     <b><label asp-for="Movie.Trailer" class="control-label"></label></b>
                                     <input asp-for="Movie.Trailer" class="form-control" />
-                                    <span asp-validation-for="Movie.Trailer" class="text-danger"></span>
                                 </div>
                             </td>
                         </tr>
