--- a/Moviekus/Moviekus.Web/Pages/Movies/Edit.cshtml
+++ b/Moviekus/Moviekus.Web/Pages/Movies/Edit.cshtml
@@ -14,7 +14,7 @@
 
 <hr />
 
-<div> 
+<div>
     <form method="post" enctype="multipart/form-data">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <table style="width:100%">
@@ -59,7 +59,6 @@
                                     <input asp-for="Movie.EpisodeNumber" class="form-control" />
                                 </div>
                             </td>
-
                         </tr>
                     </table>
                     <div class="form-group" style="padding-bottom:5px;">
@@ -71,7 +70,7 @@
                     <div class="form-group">
                         <b>@Html.DisplayNameFor(model => model.Movie.Source)</b>
                         <br />
-                        <select asp-for="SelectedSourceId" asp-items="Model.Sources" class="form-control"></select>
+                        <select asp-for="Movie.Source.Id" asp-items="Model.Sources" id="sourceSelect" onchange="javascript:onSourceChange();" class="form-control"></select>
                         <span asp-validation-for="Movie.Source" class="text-danger"></span>
                     </div>
                     <table style="width:100%">
@@ -104,7 +103,6 @@
                         <img src="@img64Url" style="width: 160px;height: 220px; padding:5px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);" />
                         <br />
                         <input type="file" asp-for="Cover" style="padding-top:20px" />
-                        <input type="hidden" asp-for="Movie.Cover" />
                     </p>
                     <div>
                         <b><label asp-for="Movie.MovieGenres" class="control-label"></label></b>
@@ -136,6 +134,7 @@
 <div>
     <a asp-page="./Index">Zurück zur Liste</a>
 </div>
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
