--- a/Moviekus/Moviekus.Web/Pages/Movies/Edit.cshtml
+++ b/Moviekus/Moviekus.Web/Pages/Movies/Edit.cshtml
@@ -123,6 +123,7 @@
         </div>
 
         <input type="hidden" asp-for="Movie.Id" />
+        <input type="hidden" asp-for="Movie.IsNew" />
         <div class="form-group">
             <input type="submit" value="Speichern" class="btn btn-primary" />
         </div>
