--- a/Moviekus/Moviekus.Web/Pages/Movies/Index.cshtml
+++ b/Moviekus/Moviekus.Web/Pages/Movies/Index.cshtml
@@ -16,7 +16,7 @@
     <table>
         <tr>
             <td style="padding-right:10px;"><img src="~/images/addnew.png" style="width:24px;height:24px;" title="Neuen Film anlegen"></td>
-            <td><a asp-page="Create">Neuer Film</a></td>
+            <td><a asp-page="Edit">Neuer Film</a></td>
         </tr>
     </table>
 </p>
