--- a/Moviekus/Moviekus.Web/Pages/Sources/Edit.cshtml
+++ b/Moviekus/Moviekus.Web/Pages/Sources/Edit.cshtml
@@ -25,6 +25,7 @@
                 <span asp-validation-for="Source.Name" class="text-danger"></span>
             </div>
             <input type="hidden" asp-for="Source.Id" />
+            <input type="hidden" asp-for="Source.IsNew" />
             <div class="form-group">
                 <input type="submit" value="Speichern" class="btn btn-primary" />
             </div>
