Validierung für Name in Genre und Source aufgenommen Keine Speicherbuttons, sondern Handling von OnBackButtonPressed Ausbau des Backbuttons in NavigationBar von Android, da der nicht funktioniert für OnBackButttonPressed-Event #18 #20

--- a/Moviekus/Moviekus/Views/Genres/GenreDetailPage.xaml
+++ b/Moviekus/Moviekus/Views/Genres/GenreDetailPage.xaml
@@ -16,6 +16,7 @@
         <StackLayout Padding="14">
             <Label Text="Name" Style="{StaticResource HeadingLabelStyle}"/>
             <Entry Text="{Binding Genre.Name}"/>
+            <Label x:Name="Genre_NameError" IsVisible="False" TextColor="Red" />
         </StackLayout>
 
     </ContentPage.Content>
