--- a/Moviekus/Moviekus.Web/Pages/Movies/Index.cshtml
+++ b/Moviekus/Moviekus.Web/Pages/Movies/Index.cshtml
@@ -22,14 +22,17 @@
 </p>
 
 <form>
-    <p>
+    <div>
         Schnellsuche: <input type="text" asp-for="QuickSearch" />
         &nbsp;Filter
         <select asp-for="SelectedFilterId" asp-items="Model.FilterList">
             <option value="">Kein Filter</option>
         </select>
-        <input type="submit" value="Ausführen" />
-    </p>
+        &nbsp;Sortierung
+        <select asp-for="MovieSortOrder" asp-items="Html.GetEnumSelectList<Moviekus.ServiceContracts.MovieSortOrder>()">
+        </select>
+        &nbsp;<input type="submit" value="Anwenden" class="btn btn-primary" />
+    </div>
 </form>
 
 <table class="table">
